fix(components/sashbox): prevent overflow when moving splitter
Moving the splitter between sashes sometimes caused the sashbox or sashes to overflow.

--- a/projects/scion/components/sashbox/src/sashbox.component.scss
+++ b/projects/scion/components/sashbox/src/sashbox.component.scss
@@ -67,6 +67,12 @@
     }
   }
 
+  &.sashing {
+    // Avoid overflow when sashing
+    max-height: calc(var(--ɵsci-sashbox-max-height) * 1px);
+    max-width: calc(var(--ɵsci-sashbox-max-width) * 1px);
+  }
+
   &.sashing > div.sash {
     pointer-events: none; // e.g. iframes would swallow pointer events
   }
